--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
         <li><a href="#about"><i class="fa fa-user"></i> About</a></li>
         <li><a href="#education"><i class="fa fa-list"></i>Education</a></li>
-        <li><a href="#experience"><i class="fa fa-list"></i>Experience</a></li>
+        <li><a href="#education"><i class="fa fa-list"></i>Experience</a></li>
         <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Projects</a></li>
         <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
       </ul>
